Fixed spacing rule

--- a/src/scss/parts/_card.scss
+++ b/src/scss/parts/_card.scss
@@ -25,7 +25,7 @@
         transition: opacity 4s $ease-out-quad;
     }
     
-    &:nth-child(3n) {
+    &:nth-child(2n) {
         margin: 0 col(0.75, 24) s(40);
     }
     
